force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Primary_Goal__c.field-meta.xml
<CustomField>
    <fullName>Primary_Goal__c</fullName>
    <label>Primary Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>