force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Remove_Annual_Reporting_Default_Footnote__c.field-meta.xml
<CustomField>
    <fullName>Remove_Annual_Reporting_Default_Footnote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to force the Annual Reporting Default Footnotes field to blank.</inlineHelpText>
    <label>Remove Annual Reporting Default Footnote</label>
    <type>Checkbox</type>
</CustomField>