force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Scholarship_Type__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Type__c</fullName>
    <label>Scholarship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Athletic Scholarships</fullName>
            </value>
            <value>
                <fullName>Chairs</fullName>
            </value>
            <value>
                <fullName>Completion and Emergency Grants</fullName>
            </value>
            <value>
                <fullName>Completion Grants</fullName>
            </value>
            <value>
                <fullName>Emergency Grants</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Extension &amp; Outreach</fullName>
            </value>
            <value>
                <fullName>Fellowship scholarships</fullName>
            </value>
            <value>
                <fullName>Foundation Accounts</fullName>
            </value>
            <value>
                <fullName>Foundation Budget Account</fullName>
            </value>
            <value>
                <fullName>General Scholarships</fullName>
            </value>
            <value>
                <fullName>George Washington Carver Sch</fullName>
            </value>
            <value>
                <fullName>Hixson Opportunity Awards</fullName>
            </value>
            <value>
                <fullName>Innovation in Teaching, Research</fullName>
            </value>
            <value>
                <fullName>Innovation in Teaching - Research</fullName>
            </value>
            <value>
                <fullName>International Programs</fullName>
            </value>
            <value>
                <fullName>Iowa Egg Council Endowment Program</fullName>
            </value>
            <value>
                <fullName>Ivy College of Business Funds</fullName>
            </value>
            <value>
                <fullName>Legacy of Heroines Scholarship</fullName>
            </value>
            <value>
                <fullName>Minority Scholar. (non-Carver)</fullName>
            </value>
            <value>
                <fullName>Named Undergraduate Scholarshi</fullName>
            </value>
            <value>
                <fullName>National Merit (non-president)</fullName>
            </value>
            <value>
                <fullName>New and Enhanced Programs</fullName>
            </value>
            <value>
                <fullName>Other Buildings</fullName>
            </value>
            <value>
                <fullName>Other Endowments</fullName>
            </value>
            <value>
                <fullName>Pres. Leadership Initiative Aw</fullName>
            </value>
            <value>
                <fullName>Presidential Scholar - Nat&apos;l M</fullName>
            </value>
            <value>
                <fullName>Pres Scholarship - Nat&apos;l Achie</fullName>
            </value>
            <value>
                <fullName>Professorships</fullName>
            </value>
            <value>
                <fullName>Recreation/Athletic Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>