force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Secondary_Goal__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Goal__c</fullName>
    <description>ea 6-27-2022
Values from dbao11p.UHELP.SCNDRY_GOAL, this still masters the code to description translation for the FE to ascend integration. Values from that table dont have to be added here as &quot;restrict picklist to values&quot; is off but that is where the integration is getting the values from.</description>
    <label>Secondary Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LAS-Driving Discovery, Engagement&amp;Innov</fullName>
            </value>
            <value>
                <fullName>Bus-General Faculty Support</fullName>
            </value>
            <value>
                <fullName>SA-Student Support/Scholarships</fullName>
            </value>
            <value>
                <fullName>Ag-Research &amp; Ext Faculty &amp; Program Supp</fullName>
            </value>
            <value>
                <fullName>Ag-Graduate Student Support</fullName>
            </value>
            <value>
                <fullName>HS-Transformative Research</fullName>
            </value>
            <value>
                <fullName>HS-Student Initiatives</fullName>
            </value>
            <value>
                <fullName>Ag-Global Agriculture Program Support</fullName>
            </value>
            <value>
                <fullName>Eng-Undergraduate Student Support</fullName>
            </value>
            <value>
                <fullName>HS-High-Impact Student Experience</fullName>
            </value>
            <value>
                <fullName>Bus-General Scholarships</fullName>
            </value>
            <value>
                <fullName>LAS-Empowering our Educators and Leaders</fullName>
            </value>
            <value>
                <fullName>Athletics-Capital Support</fullName>
            </value>
            <value>
                <fullName>LAS-Putting Students First</fullName>
            </value>
            <value>
                <fullName>Ag-Global Agriculture Student Support</fullName>
            </value>
            <value>
                <fullName>SA-Student Affairs Program Support</fullName>
            </value>
            <value>
                <fullName>Ag-Undergraduate Scholarship Support</fullName>
            </value>
            <value>
                <fullName>Design-Student Excellence</fullName>
            </value>
            <value>
                <fullName>Eng-Strategic Program Initiatives</fullName>
            </value>
            <value>
                <fullName>Ag-General Support</fullName>
            </value>
            <value>
                <fullName>Bus-General Business Support</fullName>
            </value>
            <value>
                <fullName>VM-DVM Scholarships</fullName>
            </value>
            <value>
                <fullName>VM-Dean&apos;s Strategic Funds</fullName>
            </value>
            <value>
                <fullName>Library - The Library Fund</fullName>
            </value>
            <value>
                <fullName>Ag-BioSciences Capital Project</fullName>
            </value>
            <value>
                <fullName>VM-Lloyd Veterinary Medical Center Excel</fullName>
            </value>
            <value>
                <fullName>Eng-Faculty Support Funds</fullName>
            </value>
            <value>
                <fullName>Alumni Association Programs Endowment</fullName>
            </value>
            <value>
                <fullName>ISUAA General</fullName>
            </value>
            <value>
                <fullName>VM-Chairs &amp; Professorships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>