force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/SpentCash__c.field-meta.xml
<CustomField>
    <fullName>SpentCash__c</fullName>
    <label>SpentCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>