force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/SpentPrincipal__c.field-meta.xml
<CustomField>
    <fullName>SpentPrincipal__c</fullName>
    <label>SpentPrincipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>