force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/SpentTotal__c.field-meta.xml
<CustomField>
    <fullName>SpentTotal__c</fullName>
    <label>SpentTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>