force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/Student_Experience__c.field-meta.xml
<CustomField>
    <fullName>Student_Experience__c</fullName>
    <label>Student Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>