force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Academic_Organization__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Academic_Organization__c</fullName>
    <label>Academic Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>