force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Acknowledgement_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Acknowledgement_Description__c</fullName>
    <inlineHelpText>Populated by Gift Processing team to override G/L Acknowledgement Description</inlineHelpText>
    <label>Acknowledgement Description</label>
    <type>TextArea</type>
</CustomField>