force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Alliance_Survey__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Alliance_Survey__c</fullName>
    <label>Alliance Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Research</fullName>
            </value>
            <value>
                <fullName>Physical Sciences</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Behavioral and Social Sciences</fullName>
            </value>
            <value>
                <fullName>Humanities and Arts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>