force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Areas_of_Giving_CASE_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Areas_of_Giving_CASE_Type__c</fullName>
    <label>Areas of Giving (CASE Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CU - Current Unrestricted</fullName>
            </value>
            <value>
                <fullName>CR - Current Restricted</fullName>
            </value>
            <value>
                <fullName>EN - Endowment</fullName>
            </value>
            <value>
                <fullName>PL - Plant</fullName>
            </value>
            <value>
                <fullName>LN - Loan</fullName>
            </value>
            <value>
                <fullName>NG - Non-Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>