force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Business_Unit_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Business_Unit_Code_Formula__c</fullName>
    <description>Shows the Business Unit Code</description>
    <formula>IF (ISBLANK(  ucinn_ascendv2__X1_Academic_Org__r.Name  ),    ucinn_ascendv2__X1_Department__r.Name   , ucinn_ascendv2__X1_Academic_Org__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Code</label>
    <type>Text</type>
</CustomField>