force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Business_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Business_Unit_Formula__c</fullName>
    <description>Leverages the Academic Org and Department for Daily Contribution report</description>
    <formula>IF (ISBLANK(ucinn_ascendv2__X1_Academic_Org_Name_Formula__c), ucinn_ascendv2__X1_Department_Name_Formula__c, ucinn_ascendv2__X1_Academic_Org_Name_Formula__c)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>