force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__CASE_Purpose__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__CASE_Purpose__c</fullName>
    <description>Case Purpose from CRS</description>
    <label>CASE Purpose (DEPRECATED)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>