force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__CASE_Purpose_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__CASE_Purpose_v1__c</fullName>
    <label>CASE Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
            <value>
                <fullName>Academic Divisions</fullName>
            </value>
            <value>
                <fullName>Faculty and Staff Compensation</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Public Service</fullName>
            </value>
            <value>
                <fullName>Libraries</fullName>
            </value>
            <value>
                <fullName>Plant Operations and Maintenance</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>