force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__CASE_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__CASE_Type__c</fullName>
    <label>CASE Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Unrestricted</fullName>
            </value>
            <value>
                <fullName>Endowment &amp; Similar</fullName>
            </value>
            <value>
                <fullName>Loan Funds</fullName>
            </value>
            <value>
                <fullName>Plant Funds</fullName>
            </value>
            <value>
                <fullName>Current Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>