force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Default_Non_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Non_Gift_Amount__c</fullName>
    <inlineHelpText>The default Non-Gift Amount applied to the Designation Detail if this designation is used.</inlineHelpText>
    <label>Default Non-Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>