force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Department__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department__c</fullName>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>