force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Department_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department_Code_Formula__c</fullName>
    <description>Always shows the Department code even if both Academic Org and Department is populated</description>
    <formula>IF ( NOT(ISBLANK(  ucinn_ascendv2__X1_Academic_Org__r.Name )) &amp;&amp; NOT(ISBLANK( ucinn_ascendv2__X1_Department__r.Name )), ucinn_ascendv2__X1_Department__r.Name , IF (ISBLANK(ucinn_ascendv2__X1_Department__r.Name), ucinn_ascendv2__X1_Academic_Org__r.Name , ucinn_ascendv2__X1_Department__r.Name))</formula>
    <label>Department Code</label>
    <type>Text</type>
</CustomField>