force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Department_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department_Formula__c</fullName>
    <formula>IF ( NOT(ISBLANK(ucinn_ascendv2__X1_Academic_Org_Name_Formula__c)) &amp;&amp; NOT(ISBLANK(ucinn_ascendv2__X1_Department_Name_Formula__c)), ucinn_ascendv2__X1_Department_Name_Formula__c, IF (ISBLANK(ucinn_ascendv2__X1_Department_Name_Formula__c), ucinn_ascendv2__X1_Academic_Org_Name_Formula__c, ucinn_ascendv2__X1_Department_Name_Formula__c))</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>