force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Dept_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Dept_ID__c</fullName>
    <label>Dept ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>