force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Designation_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Beneficiaries__c</fullName>
    <label>Designation Beneficiaries</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>