force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Designation_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Name__c</fullName>
    <inlineHelpText>Displayed on Gift Processing and Giving Detail</inlineHelpText>
    <label>Designation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>