force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Division__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Division must be a work plan unit Type of Division</errorMessage>
        <filterItems>
            <field>ucinn_ascendv2__Work_Plan_Unit__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Division</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Designations (Division)</relationshipLabel>
    <relationshipName>Designations_Division</relationshipName>
    <type>Lookup</type>
</CustomField>