force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Endowment_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Endowment_Book_Value__c</fullName>
    <description>Derived from &apos;Endowment Financials&apos; for current Fiscal year (or most recent fiscal year)</description>
    <label>Endowment Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>