force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Endowment_Shares__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Endowment_Shares__c</fullName>
    <description>Rollup from previous year endowment financials record</description>
    <label>Endowment Shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>