force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Fund_Comments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Comments__c</fullName>
    <inlineHelpText>Comments for Endowment Report purpose</inlineHelpText>
    <label>Fund Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>