force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Fund_Group__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Group__c</fullName>
    <description>Fund Group loaded from CRS</description>
    <label>Fund Group</label>
    <length>2</length>
    <type>Text</type>
</CustomField>