force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Name__c</fullName>
    <description>If populated, this will be used instead of Acknowledgement Description</description>
    <inlineHelpText>Fund Name to be used for Endowment Reports instead of Acknowledgement Description</inlineHelpText>
    <label>Fund Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>