force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Fund_Purpose__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fund_Purpose__c</fullName>
    <description>Endowment Report Use</description>
    <inlineHelpText>Used Endowment Reports by Stewardship Team</inlineHelpText>
    <label>Fund Purpose</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>