force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__G_L_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__G_L_Account__c</fullName>
    <label>G / L Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>