force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__G_L_Acknowledgement_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__G_L_Acknowledgement_Description__c</fullName>
    <description>Long Description from the G/L</description>
    <label>G / L Acknowledgement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>