force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__G_L_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__G_L_Effective_Date__c</fullName>
    <label>G / L Effective Date</label>
    <type>Date</type>
</CustomField>