force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__G_L_FASB_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__G_L_FASB_Type__c</fullName>
    <label>G / L FASB Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Restricted</fullName>
            </value>
            <value>
                <fullName>Temporary Restricted</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>