force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__G_L_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__G_L_Short_Description__c</fullName>
    <label>G / L Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>