force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Is_Excluded_From_Matching_Gifts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Excluded_From_Matching_Gifts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designation is excluded from matching gift creation.</description>
    <label>Is Excluded From Matching Gifts</label>
    <type>Checkbox</type>
</CustomField>