force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Is_Publicly_Visible__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Publicly_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Publicly Visible</label>
    <type>Checkbox</type>
</CustomField>