force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Minimum_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minimum_Gift_Amount__c</fullName>
    <inlineHelpText>The minimum Gift/Pledge amount required on the Designation Detail in order to use this designation.</inlineHelpText>
    <label>Minimum Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>