force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Non_Gift_Object_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Object_Code_Formula__c</fullName>
    <formula>IF ((LEFT( ucinn_ascendv2__G_L_Account__c , 2) = &quot;10&quot;), &quot;06100&quot;, IF ((LEFT( ucinn_ascendv2__G_L_Account__c , 1) = &quot;5&quot;) ||(LEFT( ucinn_ascendv2__G_L_Account__c , 2) = &quot;95&quot;) || (LEFT( ucinn_ascendv2__G_L_Account__c , 2) = &quot;98&quot;) || (LEFT( ucinn_ascendv2__G_L_Account__c , 2) = &quot;99&quot;), &quot;90201&quot;, &quot;90208&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Gift Object Code (DEPRECATED)</label>
    <type>Text</type>
</CustomField>