force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Override_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Override_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to be able to update to override the End Date and make the Status of a Designation active</inlineHelpText>
    <label>Override Status</label>
    <type>Checkbox</type>
</CustomField>