force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Parent_Business_Unit_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Business_Unit_1_Formula__c</fullName>
    <formula>ucinn_ascendv2__X1_Department__r.ucinn_ascendv2__Parent_Academic_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Business Unit 1</label>
    <type>Text</type>
</CustomField>