force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Parent_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Designations</relationshipLabel>
    <relationshipName>Designations_Parent_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>