force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Payroll_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payroll_Code__c</fullName>
    <externalId>true</externalId>
    <label>Payroll Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>