force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Program_Code_Descripton__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Program_Code_Descripton__c</fullName>
    <description>Program Code Description</description>
    <label>Program Code Descripton</label>
    <length>255</length>
    <type>Text</type>
</CustomField>