force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__RFA_Purpose__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__RFA_Purpose__c</fullName>
    <description>RFA Purpose loaded from CRS</description>
    <label>RFA Purpose</label>
    <length>3</length>
    <type>Text</type>
</CustomField>