force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status_Formula__c</fullName>
    <formula>IF( (ucinn_ascendv2__G_L_Effective_Date__c &lt;= Today()  &amp;&amp;  (ucinn_ascendv2__G_L_Expiration_Date__c &gt; Today() || ISNULL(ucinn_ascendv2__G_L_Expiration_Date__c))||  ucinn_ascendv2__Override_Status__c  = true), &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>