force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Unit_1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit_1_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Unit 1 Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>