force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Unit_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit_2__c</fullName>
    <label>Unit 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>