force-app/main/default/objects/ucinn_ascendv2__Designation__c/fields/ucinn_ascendv2__Work_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Work_Plan_Unit__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Work Plan Unit</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Designations (Work Plan Unit)</relationshipLabel>
    <relationshipName>Designations_Work_Plan_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>